force-app/main/default/objects/SproutSocialApp__Package_Log__c/fields/SproutSocialApp__Location__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Location__c</fullName>
    <description>Class and line number where exception occured</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>