force-app/main/default/objects/SproutSocialApp__Package_Log__c/fields/SproutSocialApp__Message__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Message__c</fullName>
    <description>Exception message</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>