force-app/main/default/objects/SproutSocialApp__Package_Log__c/fields/SproutSocialApp__Package_Log_Number__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Package_Log_Number__c</fullName>
    <label>Package Log Number</label>
    <type>AutoNumber</type>
</CustomField>