force-app/main/default/objects/SproutSocialApp__Package_Log__c/listViews/SproutSocialApp__Debug_Logs.listView-meta.xml
<ListView>
    <fullName>SproutSocialApp__Debug_Logs</fullName>
    <columns>NAME</columns>
    <columns>SproutSocialApp__Type__c</columns>
    <columns>SproutSocialApp__Location__c</columns>
    <columns>SproutSocialApp__Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SproutSocialApp__Type__c</field>
        <operation>equals</operation>
        <value>Debug</value>
    </filters>
    <label>Debug Logs</label>
</ListView>